--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^1.8.2",
     "gh-pages": "^6.3.0",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
