--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_API_URL="https://api.idm.internal.destion.in/"
 # VITE_API_URL="http://127.0.0.1:8000/"
+# VITE_API_URL = "https://api-dev.idealmart.ca/"
